# dashi

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  all_classes.py  all_constants.py  all_methods.py  dashi.html  dashi.supervised_characterization.html  dashi.unsupervised_characterization.html  dashi.unsupervised_characterization.igt.html  estimate_data_temporal_map.py  estimate_igt_trajectory.py  format_date.py  genindex.html  igt_projection.py  index.html  main.py  main_multidim.py  modules.html  pyproject.toml  requirements.txt  search.html  setup.py  utils.py
.github/workflows/: publish.yml
_modules/dashi/: constants.html  utils.html
_modules/dashi/supervised_characterization/: arrange_metrics.html  plot_performance.html
_modules/dashi/unsupervised_characterization/data_temporal_map/: data_temporal_map.html  data_temporal_map_plotter.html
_sources/: dashi.supervised_characterization.rst.txt  index.rst.txt
dashi/: __init__.py  _constants.py  constants.py  utils.py
dashi/data_temporal_map/: data_temporal_map.py  data_temporal_map_plotter.py
dashi/igt/: igt_plotting.py  igt_projection.py  igt_projection_estimator.py  igt_trajectory_estimator.py
dashi/supervised_characterization/: arrange_metrics.py  estimate_models.py  plot_performance.py
dashi/unsupervised_characterization/data_temporal_map/: data_temporal_map.py  data_temporal_map_plotter.py
dashi/unsupervised_characterization/igt/: igt_plotting.py  igt_projection.py  igt_projection_estimator.py  igt_trajectory_estimator.py
data_temporal_map/: data_temporal_map.py  data_temporal_map_plotter.py
datashift/: constants.py  utils.py
datashift/data_temporal_map/: data_temporal_map.py  data_temporal_map_plotter.py
datashift/igt/: igt_plotting.py  igt_projection.py  igt_projection_estimator.py  igt_trajectory_estimator.py
datashift/supervised_characterization/: arrange_metrics.py  estimate_models.py  plot_performance.py
datashift/unsupervised_characterization/data_temporal_map/: data_temporal_map.py  data_temporal_map_plotter.py
datashift/unsupervised_characterization/igt/: igt_plotting.py  igt_projection.py  igt_projection_estimator.py  igt_trajectory_estimator.py
datashift/webapp/: manage.py
datashift/webapp/dashboard/: views.py
datashift/webapp/dashboard/templates/: home.html  plot_results.html
datashift/webapp/templates/: base.html
datashift/webapp/webapp/: asgi.py  settings.py  urls.py  wsgi.py
docs/: generate
docs/source/: conf.py  dashi.data_temporal_map.rst  dashi.igt.rst  dashi.rst  datashift.igt.rst  index.rst  modules.rst
examples/: covid_mexico.py  example_simulated.py  functions_unsup_test.py  generated_dataset.py  main.py  main_multidim.py
igt/: igt_plotting.py  igt_projection.py  igt_projection_estimator.py  igt_trajectory_estimator.py
