[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashi"
version = "0.1.0"
description = "A description of my library"
authors = [{ name = "Carlos Sáez Silvestre, David Fernández Narro, Ángel Sánchez García", email = "youremail@example.com" }]
dependencies = [# Add your dependencies here
    "numpy>=1.26.1",
    "pandas>=2.2.2",
    "plotly>=5.18.0",
    "sklearn==1.5.1",
    "dateutil>=2.8.2",
    "tqdm>=4.66.5",
    "prince>=0.14.0",
]
